feat: add profileinfo

--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -6,3 +6,12 @@
     max-width: 200px;
 }
 
+.contact{
+    padding-left:10px;
+}
+
+.formSummaryError{
+    border: solid red 2px;
+    padding: 5px;
+    color: crimson;
+}
