--- a/src/App.css
+++ b/src/App.css
@@ -11,24 +11,5 @@
 
 .app-wrapper-content {
     grid-area: c;
-    background-color: cornflowerblue;
+    background-color: #6495ed;
 }
-
-
-
-
-
-
-
-
-
-
-/*
-
-/messages
-/dialogs
-
-/dialogs/3
-/dialogs/2
-
-*/
